// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookablesFilter component should render correctly 1`] = `
"<header-stub title=\\"Mock translation\\" hasback=\\"true\\">
  <icon-button-stub icon=\\"check-mark\\" iconcolor=\\"\\" disabled=\\"false\\" type=\\"submit\\" form=\\"filterBookablesForm\\"></icon-button-stub>
</header-stub>
<form id=\\"filterBookablesForm\\" class=\\"my-2 mx-4\\">
  <div class=\\"flex flex-row\\">
    <div class=\\"flex flex-col flex-grow\\">
      <input-field-stub iconname=\\"play\\">
        <date-time-picker-stub modelvalue=\\"Fri Oct 15 1993 03:24:00 GMT+0000 (Coordinated Universal Time)\\" placeholder=\\"Mock translation\\" mindate=\\"Fri Oct 15 1993 03:24:00 GMT+0000 (Coordinated Universal Time)\\"></date-time-picker-stub>
      </input-field-stub>
      <input-field-stub iconname=\\"stop\\">
        <date-time-picker-stub modelvalue=\\"Fri Oct 15 1993 05:24:00 GMT+0000 (Coordinated Universal Time)\\" placeholder=\\"Mock translation\\" mindate=\\"Fri Oct 15 1993 03:24:00 GMT+0000 (Coordinated Universal Time)\\"></date-time-picker-stub>
      </input-field-stub>
    </div>
    <!--v-if-->
  </div>
</form>"
`;

exports[`BookablesFilter component should show the current filter values 1`] = `
"<header-stub title=\\"Mock translation\\" hasback=\\"true\\">
  <icon-button-stub icon=\\"check-mark\\" iconcolor=\\"\\" disabled=\\"false\\" type=\\"submit\\" form=\\"filterBookablesForm\\"></icon-button-stub>
</header-stub>
<form id=\\"filterBookablesForm\\" class=\\"my-2 mx-4\\">
  <div class=\\"flex flex-row\\">
    <div class=\\"flex flex-col flex-grow\\">
      <input-field-stub iconname=\\"play\\">
        <date-time-picker-stub modelvalue=\\"Mon Oct 15 2001 03:24:00 GMT+0000 (Coordinated Universal Time)\\" placeholder=\\"Mock translation\\" mindate=\\"Fri Oct 15 1993 03:24:00 GMT+0000 (Coordinated Universal Time)\\"></date-time-picker-stub>
      </input-field-stub>
      <input-field-stub iconname=\\"stop\\">
        <date-time-picker-stub modelvalue=\\"Tue Oct 15 2002 03:24:00 GMT+0000 (Coordinated Universal Time)\\" placeholder=\\"Mock translation\\" mindate=\\"Fri Oct 15 1993 03:24:00 GMT+0000 (Coordinated Universal Time)\\"></date-time-picker-stub>
      </input-field-stub>
    </div>
    <button-stub icon=\\"dismiss\\" disabled=\\"false\\" outlined=\\"true\\" class=\\"ml-4 px-1\\"></button-stub>
  </div>
</form>"
`;
